# pyreadwise

./: pyproject.toml
docs/: index.md
readwise/: api.py  cli.py  models.py
tests/unit/: test_api.py  test_cli.py  test_utils.py
